Fix too small subtitle text
- on Safari in iPadOS 15

--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -213,6 +213,7 @@ $bg4-y: calc(100% - 224px);
       }
     }
     &-anim {
+      width: 700px;
       height: 30px;
     }
   }
